# quacknettor

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  generate_data.py  pipelines.yml  pr_description.md  pyproject.toml  pytest.ini  requirements.txt  test_pg_connection.py  test_snowflake_connection.py  tmp_e2e.py
.github/workflows/: ci.yml  release.yml
api/: __init__.py  main.py  schemas.py
configs/: pipelines.yml  pipelines_integration.yml
configs/templates/: .env.example  .env.template
docs/: naming_conventions.md
duckel/: adapters.py  config.py  engine.py  jules.py  logger.py  models.py  runner.py  scheduler.py
ops/: runbook.md
scripts/: benchmark.py  generate_data.py  launch_pg.py  launch_v2.py
tests/: conftest.py  generate_test_data.py  smoke_test.py  test_adapters.py  test_config.py  test_core.py  test_engine.py  test_evolution.py  test_incremental.py  test_pipelines.py  test_runner.py
tests/integration/: __init__.py  test_matrix.py
ui/: main.py
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: CreatePipelineModal.tsx  page.tsx
