[project]
name = "quacknettor"
version = "1.1.0"
description = "A DuckDB-powered Extract & Load framework with Streamlit UI and AI Assistant."
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "duckdb==1.1.0",
    "pyyaml>=6.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "watchdog>=4.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
